# tokio-modbus

./: .codespellignore  .commitlintrc.json  .commitlintrc.json.license  .deny.toml  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  .taplo.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  dev-env.nix  run_cargo-tests.sh  run_cargo-udeps.sh  run_pre-commit.sh  run_socat.sh  rust-toolchain.toml
.cargo/: config  config.toml
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  check-crate-features.yaml  continuous-integration.yaml  continuous_integration.yaml  dependency-audit.yaml  pre-commit.yaml  publish-release.yaml  security-audit.yaml  security_audit.yaml
LICENSES/: MIT.txt
examples/: rtu-client-shared-context.rs  rtu-client-shared_context.rs  rtu-client-sync.rs  rtu-client.rs  rtu-over-tcp-server.rs  rtu-server-address.rs  rtu-server.rs  tcp-client-custom-fn.rs  tcp-client-sync.rs  tcp-client.rs  tcp-rtu-server-async.rs  tcp-server.rs  tcp_server_shutdown_demo.rs  tls-client.rs  tls-server.rs
pki/: ca.key  ca.pem  client.key  client.pem  generate_cert_and_key.sh  server.key  server.pem
src/: client.rs  device.rs  error.rs  frame.rs  lib.rs  prelude.rs  proto.rs  rtu.rs  server.rs  service.rs  slave.rs  tcp.rs
src/client/: mod.rs  rtu.rs  tcp.rs  tls.rs  util.rs
src/client/sync/: mod.rs  rtu.rs  tcp.rs
src/codec/: common.rs  encoder.rs  mod.rs  rtu.rs  tcp.rs  tls.rs
src/frame/: mod.rs  rtu.rs  tcp.rs  tls.rs
src/proto/: mod.rs  rtu.rs  tcp.rs
src/server/: mod.rs  rtu.rs  rtu_over_tcp.rs  service.rs  tcp.rs  tcp_server.rs  tls.rs
src/service/: mod.rs  rtu.rs  service.rs  tcp.rs  tls.rs
tests/: rtu_all_exceptions.rs  rtu_over_tcp_all_exceptions.rs  rtu_over_tcp_server_shutdown.rs  tcp_all_exceptions.rs  tcp_repeated_register_write.rs  tcp_server_shutdown.rs
tests/exception/: mod.rs
